Migrate employee to citizen
